--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@material-ui/core": "^3.9.1",
     "babel-eslint": "^9.0.0",
     "connected-react-router": "^6.2.2",
+    "eslint": "^5.6.0",
+    "express": "^4.16.4",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
@@ -13,8 +15,10 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "redux": "^4.0.1",
+    "redux-act": "^1.7.4",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "socket.io": "^2.2.0",
     "styled-components": "^4.1.3"
   },
   "scripts": {
