--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "eslint": "^5.6.0",
     "express": "^4.16.4",
     "lowdb": "^1.0.0",
+    "nedb": "^1.8.0",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
